# certbot-dns-gigahost

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  setup.py  tox.ini
.github/: release-drafter.yml
.github/workflows/: lint.yml  publish.yml  test.yml
certbot_dns_gigahost/: __init__.py  authenticator.py  dns_gigahost.py  dns_gigahost_test.py
